// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE": respRehype 1`] = `
VFile {
  "contents": "<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
<a href=\\"foo-id.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
<p><a href=\\"bar.html\\">bar</a></p>
</div>    
</div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: NOTE_W_LINK_AND_SPACE": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 64,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo-id
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "foo bar",
            "anchorHeader": undefined,
            "vaultName": undefined,
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 8,
              "offset": 76,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 65,
            },
          },
          "type": "wikiLink",
          "value": "foo bar",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 8,
          "offset": 76,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 65,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 77,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "HTML: NOTE_W_LINK_AND_SPACE": respProcess 1`] = `
VFile {
  "contents": "---
id: foo-id
title: Foo
desc: ''
updated: '1'
created: '1'
---

[foo bar](foo bar.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: NOTE_W_LINK_AND_SPACE": respRehype 1`] = `
VFile {
  "contents": "<p><a href=\\"foo bar.html\\">foo bar</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_ABBR": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 59,
              "line": 8,
              "offset": 120,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "text",
          "value": "This plugin works on MDAST, a Markdown AST implemented by ",
        },
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 66,
                  "line": 8,
                  "offset": 127,
                },
                "indent": Array [],
                "start": Object {
                  "column": 60,
                  "line": 8,
                  "offset": 121,
                },
              },
              "type": "text",
              "value": "remark",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 103,
              "line": 8,
              "offset": 164,
            },
            "indent": Array [],
            "start": Object {
              "column": 59,
              "line": 8,
              "offset": 120,
            },
          },
          "title": null,
          "type": "link",
          "url": "https://github.com/remarkjs/remark",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 103,
          "line": 8,
          "offset": 164,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "abbr": "MDAST",
          "children": Array [
            Object {
              "type": "text",
              "value": "MDAST",
            },
          ],
          "data": Object {
            "hName": "abbr",
            "hProperties": Object {
              "title": "Markdown Abstract Syntax Tree",
            },
          },
          "position": Position {
            "end": Object {
              "column": 1,
              "line": 11,
              "offset": 206,
            },
            "indent": Array [
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 166,
            },
          },
          "reference": "Markdown Abstract Syntax Tree",
          "type": "abbr",
        },
        Object {
          "abbr": "AST",
          "children": Array [
            Object {
              "type": "text",
              "value": "AST",
            },
          ],
          "data": Object {
            "hName": "abbr",
            "hProperties": Object {
              "title": "Abstract syntax tree",
            },
          },
          "position": Position {
            "end": Object {
              "column": 29,
              "line": 11,
              "offset": 234,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 11,
              "offset": 206,
            },
          },
          "reference": "Abstract syntax tree",
          "type": "abbr",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 29,
          "line": 11,
          "offset": 234,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 166,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 12,
      "offset": 235,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "HTML: WITH_ABBR": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

This plugin works on MDAST, a Markdown AST implemented by [remark](https://github.com/remarkjs/remark)

*[MDAST]: Markdown Abstract Syntax Tree
*[AST]: Abstract syntax tree",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_ABBR": respRehype 1`] = `
VFile {
  "contents": "<p>This plugin works on <abbr title=\\"Markdown Abstract Syntax Tree\\">MDAST</abbr>, a Markdown <abbr title=\\"Abstract syntax tree\\">AST</abbr> implemented by <a href=\\"https://github.com/remarkjs/remark\\">remark</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_FOOTNOTES": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "text",
          "value": "Here is a footnote reference,",
        },
        Object {
          "identifier": "1",
          "label": "1",
          "position": Position {
            "end": Object {
              "column": 34,
              "line": 8,
              "offset": 95,
            },
            "indent": Array [],
            "start": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
          },
          "type": "footnoteReference",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 34,
          "line": 8,
          "offset": 95,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 28,
                  "line": 10,
                  "offset": 124,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 10,
                  "offset": 103,
                },
              },
              "type": "text",
              "value": "Here is the footnote.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 10,
              "offset": 124,
            },
            "indent": Array [],
            "start": Object {
              "column": 7,
              "line": 10,
              "offset": 103,
            },
          },
          "type": "paragraph",
        },
      ],
      "identifier": "1",
      "label": "1",
      "position": Position {
        "end": Object {
          "column": 28,
          "line": 10,
          "offset": 124,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 97,
        },
      },
      "type": "footnoteDefinition",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 11,
      "offset": 125,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "HTML: WITH_FOOTNOTES": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_FOOTNOTES": respRehype 1`] = `
VFile {
  "contents": "<p>Here is a footnote reference,<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">Here is the footnote.<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_MERMAID": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 21,
              "line": 9,
              "offset": 83,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 9,
              "offset": 65,
            },
          },
          "type": "text",
          "value": "mermaid code block",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 21,
          "line": 9,
          "offset": 83,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 63,
        },
      },
      "type": "heading",
    },
    Object {
      "lang": "mermaid",
      "meta": null,
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 14,
          "offset": 123,
        },
        "indent": Array [
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 11,
          "offset": 85,
        },
      },
      "type": "code",
      "value": "graph LR
Start --> Stop",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 15,
      "offset": 124,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "HTML: WITH_MERMAID": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

# mermaid code block

\`\`\`mermaid
graph LR
Start --> Stop
\`\`\`

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_MERMAID": respRehype 1`] = `
VFile {
  "contents": "<h1 id=\\"mermaid-code-block\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#mermaid-code-block\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>mermaid code block</h1>
<pre class=\\"language-mermaid\\"><code class=\\"language-mermaid\\">graph LR
Start --> Stop
</code></pre>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_TITLE_FOR_LINK": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "Ch1",
            "anchorHeader": undefined,
            "vaultName": undefined,
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 8,
              "offset": 73,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "wikiLink",
          "value": "foo.ch1",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 8,
          "offset": 73,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 74,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "HTML: WITH_TITLE_FOR_LINK": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

[Ch1](foo.ch1.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_TITLE_FOR_LINK": respRehype 1`] = `
VFile {
  "contents": "<p><a href=\\"foo.ch1.html\\">Ch1</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_TITLE_FOR_LINK_X_VAULT": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "Bar",
            "anchorHeader": undefined,
            "vaultName": "vault2",
          },
          "position": Position {
            "end": Object {
              "column": 15,
              "line": 8,
              "offset": 76,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "wikiLink",
          "value": "bar",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 8,
          "offset": 76,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 77,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "HTML: WITH_TITLE_FOR_LINK_X_VAULT": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

[Bar](bar.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_TITLE_FOR_LINK_X_VAULT": respRehype 1`] = `
VFile {
  "contents": "<p><a href=\\"bar.html\\">Bar</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: asset_prefix undefined" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: asset_prefix" 1`] = `
VFile {
  "contents": "![alt-text](/bond/image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_FOOTNOTES": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "text",
          "value": "Here is a footnote reference,",
        },
        Object {
          "identifier": "1",
          "label": "1",
          "position": Position {
            "end": Object {
              "column": 34,
              "line": 8,
              "offset": 95,
            },
            "indent": Array [],
            "start": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
          },
          "type": "footnoteReference",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 34,
          "line": 8,
          "offset": 95,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 28,
                  "line": 10,
                  "offset": 124,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 10,
                  "offset": 103,
                },
              },
              "type": "text",
              "value": "Here is the footnote.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 10,
              "offset": 124,
            },
            "indent": Array [],
            "start": Object {
              "column": 7,
              "line": 10,
              "offset": 103,
            },
          },
          "type": "paragraph",
        },
      ],
      "identifier": "1",
      "label": "1",
      "position": Position {
        "end": Object {
          "column": 28,
          "line": 10,
          "offset": 124,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 97,
        },
      },
      "type": "footnoteDefinition",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 11,
      "offset": 125,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_FOOTNOTES": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_FOOTNOTES": respRehype 1`] = `
VFile {
  "contents": "<p>Here is a footnote reference,<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">Here is the footnote.<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_TITLE_FOR_LINK": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "foo.ch1",
            "anchorHeader": undefined,
            "vaultName": undefined,
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 8,
              "offset": 73,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "wikiLink",
          "value": "foo.ch1",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 8,
          "offset": 73,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 74,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_TITLE_FOR_LINK": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

[[foo.ch1]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_TITLE_FOR_LINK": respRehype 1`] = `
VFile {
  "contents": "<p>foo.ch1</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_TITLE_FOR_LINK_X_VAULT": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "bar",
            "anchorHeader": undefined,
            "vaultName": "vault2",
          },
          "position": Position {
            "end": Object {
              "column": 15,
              "line": 8,
              "offset": 76,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "wikiLink",
          "value": "bar",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 8,
          "offset": 76,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 77,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_TITLE_FOR_LINK_X_VAULT": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

[[vault2/bar]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_TITLE_FOR_LINK_X_VAULT": respRehype 1`] = `
VFile {
  "contents": "<p>bar</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_FOOTNOTES": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "text",
          "value": "Here is a footnote reference,",
        },
        Object {
          "identifier": "1",
          "label": "1",
          "position": Position {
            "end": Object {
              "column": 34,
              "line": 8,
              "offset": 95,
            },
            "indent": Array [],
            "start": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
          },
          "type": "footnoteReference",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 34,
          "line": 8,
          "offset": 95,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 28,
                  "line": 10,
                  "offset": 124,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 10,
                  "offset": 103,
                },
              },
              "type": "text",
              "value": "Here is the footnote.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 10,
              "offset": 124,
            },
            "indent": Array [],
            "start": Object {
              "column": 7,
              "line": 10,
              "offset": 103,
            },
          },
          "type": "paragraph",
        },
      ],
      "identifier": "1",
      "label": "1",
      "position": Position {
        "end": Object {
          "column": 28,
          "line": 10,
          "offset": 124,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 97,
        },
      },
      "type": "footnoteDefinition",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 11,
      "offset": 125,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_FOOTNOTES": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_FOOTNOTES": respRehype 1`] = `
VFile {
  "contents": "<p>Here is a footnote reference,<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">Here is the footnote.<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_TITLE_FOR_LINK": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "Ch1",
            "anchorHeader": undefined,
            "vaultName": undefined,
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 8,
              "offset": 73,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "wikiLink",
          "value": "foo.ch1",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 8,
          "offset": 73,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 74,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_TITLE_FOR_LINK": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

[Ch1](foo.ch1.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_TITLE_FOR_LINK": respRehype 1`] = `
VFile {
  "contents": "<p>foo.ch1</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_VARIABLE": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 8,
          "offset": 70,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
bond: 42",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 8,
              "line": 9,
              "offset": 78,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 71,
            },
          },
          "type": "text",
          "value": "Title: ",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 20,
              "line": 9,
              "offset": 90,
            },
            "indent": Array [],
            "start": Object {
              "column": 8,
              "line": 9,
              "offset": 78,
            },
          },
          "type": "text",
          "value": "Foo",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 9,
              "offset": 98,
            },
            "indent": Array [],
            "start": Object {
              "column": 20,
              "line": 9,
              "offset": 90,
            },
          },
          "type": "text",
          "value": ". Bond: ",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 39,
              "line": 9,
              "offset": 109,
            },
            "indent": Array [],
            "start": Object {
              "column": 28,
              "line": 9,
              "offset": 98,
            },
          },
          "type": "text",
          "value": "42",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 39,
          "line": 9,
          "offset": 109,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 71,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 10,
      "offset": 110,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_VARIABLE": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
bond: 42
---

Title: Foo. Bond: 42

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_VARIABLE": respRehype 1`] = `
VFile {
  "contents": "<p>Title: Foo. Bond: 42</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: asset_prefix undefined" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: asset_prefix" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_FOOTNOTES": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "text",
          "value": "Here is a footnote reference,",
        },
        Object {
          "identifier": "1",
          "label": "1",
          "position": Position {
            "end": Object {
              "column": 34,
              "line": 8,
              "offset": 95,
            },
            "indent": Array [],
            "start": Object {
              "column": 30,
              "line": 8,
              "offset": 91,
            },
          },
          "type": "footnoteReference",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 34,
          "line": 8,
          "offset": 95,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 28,
                  "line": 10,
                  "offset": 124,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 10,
                  "offset": 103,
                },
              },
              "type": "text",
              "value": "Here is the footnote.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 10,
              "offset": 124,
            },
            "indent": Array [],
            "start": Object {
              "column": 7,
              "line": 10,
              "offset": 103,
            },
          },
          "type": "paragraph",
        },
      ],
      "identifier": "1",
      "label": "1",
      "position": Position {
        "end": Object {
          "column": 28,
          "line": 10,
          "offset": 124,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 97,
        },
      },
      "type": "footnoteDefinition",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 11,
      "offset": 125,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_FOOTNOTES": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_FOOTNOTES": respRehype 1`] = `
VFile {
  "contents": "<p>Here is a footnote reference,<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">Here is the footnote.<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 9,
              "line": 8,
              "offset": 70,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "text",
          "value": "foo body",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 9,
          "line": 8,
          "offset": 70,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 71,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

# Foo

foo body

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE": respRehype 1`] = `
VFile {
  "contents": "<h1 id=\\"foo\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#foo\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Foo</h1>
<p>foo body</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "Ch1",
            "anchorHeader": undefined,
            "vaultName": undefined,
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 8,
              "offset": 73,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "wikiLink",
          "value": "foo.ch1",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 8,
          "offset": 73,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 74,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

[Ch1](foo.ch1)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK": respRehype 1`] = `
VFile {
  "contents": "<p><a href=\\"foo.ch1.html\\">Ch1</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK_X_VAULT": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 7,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'",
    },
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "Bar",
            "anchorHeader": undefined,
            "vaultName": "vault2",
          },
          "position": Position {
            "end": Object {
              "column": 15,
              "line": 8,
              "offset": 76,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 62,
            },
          },
          "type": "wikiLink",
          "value": "bar",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 8,
          "offset": 76,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 62,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 77,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK_X_VAULT": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

[Bar](bar)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK_X_VAULT": respRehype 1`] = `
VFile {
  "contents": "<p><a href=\\"bar.html\\">Bar</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_VARIABLE": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 8,
          "offset": 70,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "yaml",
      "value": "id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
bond: 42",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 8,
              "line": 9,
              "offset": 78,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 71,
            },
          },
          "type": "text",
          "value": "Title: ",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 20,
              "line": 9,
              "offset": 90,
            },
            "indent": Array [],
            "start": Object {
              "column": 8,
              "line": 9,
              "offset": 78,
            },
          },
          "type": "text",
          "value": "Foo",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 9,
              "offset": 98,
            },
            "indent": Array [],
            "start": Object {
              "column": 20,
              "line": 9,
              "offset": 90,
            },
          },
          "type": "text",
          "value": ". Bond: ",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 39,
              "line": 9,
              "offset": 109,
            },
            "indent": Array [],
            "start": Object {
              "column": 28,
              "line": 9,
              "offset": 98,
            },
          },
          "type": "text",
          "value": "42",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 39,
          "line": 9,
          "offset": 109,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 71,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 10,
      "offset": 110,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_VARIABLE": respProcess 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
bond: 42
---

Title: Foo. Bond: 42

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_VARIABLE": respRehype 1`] = `
VFile {
  "contents": "<p>Title: Foo. Bond: 42</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: asset_prefix undefined" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: asset_prefix" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
